# cable_driven_parallel_robot_2d

./: .gitignore  README.md
.github/workflows/: main.yaml
actions_package/: setup.py
actions_package/actions_package/: count_until_client.py
cdpr_2d/: package.xml  setup.cfg  setup.py
cdpr_2d/cdpr_2d/: cdpr_controller.py  cdpr_controller_rviz.py  robot_controller.py  version1_controller.py  version2_controller.py  version3_controller.py
cdpr_2d/config/: params.yaml  robot.rviz
cdpr_2d/description/: robot.xacro
cdpr_2d/launch/: robot_state_publisher.launch.py
cdpr_2d/test/: test_copyright.py
cdpr_figures/: CMakeLists.txt  package.xml  setup.cfg  setup.py
cdpr_figures/cdpr_figures/: figures_library.py  figures_service.py
cdpr_interfaces/: CMakeLists.txt  package.xml
cdpr_interfaces/srv/: DrawFigure.srv
docs/: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
interfaces_package/: CMakeLists.txt  package.xml
interfaces_package/msg/: CableParameters.msg  EffectorCoordinates.msg  EffectorPath.msg  PulleyParameters.msg
log/: latest_build
media/files/: 1_point_output  2_points_output  3_or_more_points_output
memory/: bibliografia.bib  memoria.fdb_latexmk  memoria.fls  memoria.tex  memoria.tex~
memory/capitulos/: anexo.tex  capitulo1.fdb_latexmk  capitulo1.fls  capitulo1.tex  capitulo10.tex  capitulo11.tex  capitulo12.tex  capitulo2.tex  capitulo3.tex  capitulo4.tex  capitulo5.tex  capitulo6.tex  capitulo7.tex  capitulo8.tex  capitulo9.tex
memory/portada/: acronimos.tex  agradecimientos.tex  indice.tex  licencia.tex  portada.tex
nodes_package/: package.xml
nodes_package/nodes_package/: version0_subscriber.py  version1_subscriber.py  version2_node.py  version2_subscriber.py  version3_node.py
nodes_package/test/: test_flake8.py
robot_package/: package.xml  setup.py
robot_package/config/: robot.rviz
robot_package/launch/: robot_state_publisher.launch.py
scripts/c++/: README.md  (+3 more)
(+257 files in other folders)
